generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id         BigInt    @id @default(autoincrement())
  username   String    @unique
  firstName  String    @map("first_name")
  lastName   String    @map("last_name")
  email      String    @unique
  phone      String    @unique
  address    String
  password   String
  stores     Store[]
  approvedProducts Product[] @relation("approvedBy")
  validatedProducts Product[] @relation("validatedBy")
  guessWins   Product[] @relation("guessWinner")
  createdAt  DateTime  @default(now()) @map("created_at")
  updatedAt  DateTime  @updatedAt @map("updated_at")

  @@map("users")
}

model Store {
  id        BigInt   @id @default(autoincrement())
  userId    BigInt   @map("user_id")
  storeName String   @map("store_name")
  category  String
  description String
  location  String
  user      User     @relation(fields: [userId], references: [id])
  products  Product[]
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("stores")
}

model Category {
  id        BigInt   @id @default(autoincrement())
  name      String   @unique
  products  Product[]
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("categories")
}

model Product {
  id                   BigInt    @id @default(autoincrement())
  storeId              BigInt    @map("store_id")
  store                Store     @relation(fields: [storeId], references: [id])
  name                 String
  stock                Int
  price                Decimal   @db.Decimal(12, 2)
  categoryId           BigInt?   @map("category_id")
  category             Category? @relation(fields: [categoryId], references: [id])
  categoryString       String?   @map("category")
  description          String
  image                String?
  certificate          String?
  approvalStatus       String    @map("approval_status")
  approvedAt           DateTime? @map("approved_at")
  approvedBy           BigInt?   @map("approved_by")
  approvedByUser       User?     @relation("approvedBy", fields: [approvedBy], references: [id])
  rejectionReason      String?   @map("rejection_reason")
  validatedAt          DateTime? @map("validated_at")
  validatedBy          BigInt?   @map("validated_by")
  validatedByUser      User?     @relation("validatedBy", fields: [validatedBy], references: [id])
  isBarterable         Boolean   @map("is_barterable")
  images               Json?     @db.Json
  video                String?
  saleType             String    @map("sale_type")
  guessStartsAt        DateTime? @map("guess_starts_at")
  guessEndsAt          DateTime? @map("guess_ends_at")
  guessStatus          String?   @map("guess_status")
  guessWinnerId        BigInt?   @map("guess_winner_id")
  guessWinner          User?     @relation("guessWinner", fields: [guessWinnerId], references: [id])
  guessWinningAmount   Decimal?  @db.Decimal(12, 2) @map("guess_winning_amount")
  guessFinishedAt      DateTime? @map("guess_finished_at")
  winnerPriorityUntil  DateTime? @map("winner_priority_until")
  createdAt            DateTime  @default(now()) @map("created_at")
  updatedAt            DateTime  @updatedAt @map("updated_at")

  @@map("products")
}
